syntax = "proto3";

option java_package = "proto";
option java_outer_classname = "RandomizerSettings";

message AllPresets {
  repeated GenericSpawnPresetFilter pickup_spawn_settings = 1;
  repeated GenericSpawnPresetFilter prop_spawn_settings = 2;
  repeated GenericSpawnPresetFilter enemy_spawn_settings = 3;
  repeated GenericSpawnPresetFilter npc_spawn_settings = 4;
}

message Settings {
  string seed = 1;
  string install_dir = 2;
  string release_version = 3;
  CosmeticSettings cosmetic_settings = 4;
  GameplaySettings gameplay_settings = 5;
  GameStartSettings game_start_settings = 6;
  MoreSettings more_settings = 7;
  CheatSettings cheat_settings = 8;
  ExperimentalSettings exp_settings = 9;
}

message CosmeticSettings {
  bool randomize_bodies = 1;
  bool randomize_voicelines = 2;
  bool randomize_music = 3;
  bool randomize_player_model = 4;
  bool randomize_planet_size = 5;
  bool randomize_emotions = 6;
  bool custom_loading_tips = 7;
}

message GameplaySettings {
  GenericSpawnPresetFilter item_spawn_settings = 1;
  GenericSpawnPresetFilter enemy_spawn_settings = 2;
  bool randomize_station = 3;
  bool randomize_keycards = 15;
  bool randomize_neuromods = 4;
  bool randomize_fab_plan_costs = 5;
  bool randomize_neuromod_requirements = 16;
  ToggleWithSlider randomize_recyclers = 6;
  ToggleWithSlider randomize_dispensers = 7;
  ToggleWithSlider randomize_breakables = 8;
  ToggleWithSlider randomize_hackables = 9;
  ToggleWithSlider randomize_mimics = 14;
  string pickup_preset_name = 10;
  string prop_preset_name = 11;
  string enemy_preset_name = 12;
  string npc_preset_name = 13;
}

message ToggleWithSlider {
  bool isEnabled = 1;
  int32 sliderValue = 2;
}

message GameStartSettings {
  bool add_loot_to_apartment = 1;
  bool start_on_second_day = 2;
  bool skip_jovan_cutscene = 3;
  bool start_outside_apartment = 4;
}

message MoreSettings {
  bool more_guns = 1;
  bool prey_souls_guns = 2;
  bool prey_souls_chipsets = 3;
  bool prey_souls_enemies = 4;
  bool prey_souls_turrets = 5;
}

message CheatSettings {
  bool open_station = 1;
  bool unlock_all_scans = 2;
  bool friendly_npcs = 3;
  bool use_custom_spawn = 4;
  enum SpawnLocation {
	NONE = 0;
	RANDOM = 1;
	LOBBY = 2;
	HARDWARE_LABS = 3;
	PSYCHOTRONICS= 4;
	GUTS = 5;
	ARBORETUM = 6;
	BRIDGE = 7;
	CREW_QUARTERS = 8;
	DEEP_STORAGE = 9;
	CARGO_BAY = 10;
	LIFE_SUPPORT = 11;
	POWER_PLANT = 12;
	SHUTTLE_BAY = 13;
	EXTERIOR = 14;
	ENDGAME = 15;
	GENDER_SELECT = 16;
  }
  SpawnLocation custom_spawn_location = 5;
  string game_token_overrides = 6;
}

message ExperimentalSettings {
  bool wandering_humans = 1;
  bool living_corpses = 2;
  bool zero_gravity_everywhere = 3;
  bool enable_gravity_in_ext_and_guts = 4;
  bool fluctuating_gravity = 8;
  bool start_self_destruct = 5;
  string self_destruct_timer = 6;
  string self_destruct_shuttle_timer = 7;
}

message GenericSpawnPresetFilter {
  string name = 1;
  string desc = 2;
  repeated GenericSpawnPresetRule filters = 3;  
}

message GenericSpawnPresetRule {
  repeated string input_tags = 1;
  repeated string output_tags = 2;
  repeated int32 output_weights = 3;
  repeated string do_not_touch_tags = 4;
  repeated string do_not_output_tags = 5;
}